Bug: PRD Reviewer: Lynn Comment: data quota info in the username drop down menu was wrapping on IE. Fixed it with white-space: nowrap.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -5068,6 +5068,11 @@ td.datePickerMonth {
 	margin: .5em .5em .5em 0;
 }
 
+.userActionsPopup_NamePanel .statsTable .gwt-label
+{
+	white-space: nowrap;
+}
+
 .userActionsPopup_SignOutLabel
 {
 	display: inline-block;
